# rust-qr-wasm-demo

./: Cargo.toml  README.md  index.html  workshop.md
src/: lib.rs
